--- a/frontend/frontEcommerce/src/index.css
+++ b/frontend/frontEcommerce/src/index.css
@@ -13,6 +13,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.cardsContainer {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
