--- a/frontend/frontEcommerce/src/index.css
+++ b/frontend/frontEcommerce/src/index.css
@@ -15,7 +15,11 @@
 
 .cardsContainer {
   display: flex;
+  justify-content:space-between;
+  align-items: center;
   flex-wrap: wrap;
+  gap: .5rem;
+  width: 100%;
 }
 
 a {
