--- a/frontend/frontEcommerce/src/index.css
+++ b/frontend/frontEcommerce/src/index.css
@@ -15,8 +15,8 @@
 
 .cardsContainer {
   display: flex;
-  justify-content:space-between;
-  align-items: center;
+  justify-content:center;
+  align-items:center;
   flex-wrap: wrap;
   gap: .5rem;
   width: 100%;
