--- a/frontend/frontEcommerce/src/index.css
+++ b/frontend/frontEcommerce/src/index.css
@@ -11,6 +11,32 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+} 
+
+.loginForm { 
+  width: 100%;
+  max-width: 400px;
+  padding: 2rem;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+}
+
+.loginForm button {
+  display: block; 
+  margin: 0 auto; 
+  max-width: 200px; 
+}
+
+.loginRegister{
+  border: black solid .1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  min-height: 100vh; 
+  padding-top: 5rem; 
 }
 
 .card{
