--- a/frontend/frontEcommerce/src/index.css
+++ b/frontend/frontEcommerce/src/index.css
@@ -13,6 +13,11 @@
   -moz-osx-font-smoothing: grayscale;
 } 
 
+.footer {
+  border-top: #002fff solid .1rem;
+
+}
+
 .loginForm { 
   width: 100%;
   max-width: 400px;
@@ -64,7 +69,7 @@
 
 .cardsContainer {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr)); /* Cada tarjeta ocupa al menos 18rem */
+  grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr)); /* Cada tarjeta ocupa al menos 18rem */
   gap: 0; /* Elimina el espacio entre las tarjetas */
   
 /*   display: flex;
